# users/api.yaml
@@ -224,11 +224,6 @@ paths:
           required: true
           schema:
             type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DeleteUser'
       responses:
         204:
           description: User deleted successfully
@@ -273,33 +268,9 @@ components:
           type: string
           description: Error description
           example: None is not of type 'string'
-    DeleteUser:
-      type: object
-      required:
-        - email
-        - password
-      properties:
-        id:
-          type: integer
-          description: Unique User's identifier
-          readOnly: true
-          example: 122
-        email:
-          maxLength: 50
-          minLength: 5
-          type: string
-          description: User's email
-          example: "Anna@example.com"
-        password:
-          maxLength: 100
-          minLength: 3
-          type: string
-          description: User's password
-          example: "xxx"
     User:
       type: object
       required:
-        - id
         - email
         - firstname
         - lastname
@@ -310,7 +281,6 @@ components:
         id:
           type: integer
           description: Unique User's identifier
-          readOnly: true
           example: 122
         rest_id:
           type: integer
